--- a/src/app/content/chicago/ashland.mdx
+++ b/src/app/content/chicago/ashland.mdx
@@ -15,44 +15,44 @@ blurb:
 stickers: [{image: "/loc/chicago/ashland/rockIsland.png", linkOut: "https://www.loc.gov/resource/g4104c.pm001523/?r=-0.076,0.544,0.531,0.365,0"},{image: "/loc/chicago/ashland/rail.jpg", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.onehundredphotog01rand/?sp=119&q=elevated+railroad"}]
 ---
 
-Chicago’s transit system is very notable - it is one of only 3 cities in the world to offer 24-hour service on parts of it lines, it is the second oldest system in the United States, and has the longest subway platform in the world. This network of rails took a long time to come together, and started in 1888.
+Chicago’s transit system is very notable - it is one of only 3 cities in the world to offer 24-hour service on parts of its lines, it is the second oldest system in the United States, and has the longest subway platform in the world. This network of rails took a long time to come together, and started in 1888.
 
-<LOCItem type="map" caption="1908 Birds-eye view of the elevated railroads and the parks and boulevards of Chicago" image="/loc/chicago/ashland/l.png" linkOut="https://www.loc.gov/resource/g4104c.ct003152/?r=-0.097,-0.135,1.111,0.779,0"/>
+<LOCItem type="map" caption="1908 Birds-eye view of the elevated railroads and the parks and boulevards of Chicago" image="/loc/chicago/ashland/l.png" linkOut="https://www.loc.gov/resource/g4104c.ct003152/?r=-0.097,-0.135,1.111,0.779,0" alt="A large color map showing an aerial view of 1908 Chicago's railroads and parks."/>
 
-With the city rapidly growing in population and ground footage, the need for convenient transportation also grew. Up until the 1880s, Chicago’s street railways were “nearly all animal power”, and it was clear that some more permanent infrastructure would be necessary.
+With the city rapidly growing in population and size, the need for convenient transportation also grew. Up until the 1880s, Chicago’s street railways were “nearly all animal power”, and it was clear that more permanent infrastructure would be necessary.
 
-However, the logistics to obtaining permission to build the tracks was extremely difficult. The “L” started off as many smaller companies creating lines for a section of town outside of the central business district. The first to open in 1892 was the Chicago and South Side Rapid Transit Railroad Company and avoided the complicated permit issue by building along the alleys instead of the street, which was much cheaper.
+However, the logistics for obtaining permission to build the tracks were extremely difficult. The “L” started off as many smaller companies creating lines for a section of town outside of the central business district. The first to open in 1892 was the Chicago and South Side Rapid Transit Railroad Company who avoided the complicated permit issue by building along the alleys instead of the street, making the process much cheaper.
 
-Following a year later was the Lake Street “L” which ran from 52nd Avenue to Market & Madison and eventually became a part of the Green Line.
+The following year, the Lake Street “L”, which ran from 52nd Avenue to Market & Madison, became a part of the Green Line.
 
-<LOCItem type="pnp" caption="View of abandoned Pulsaki Tower, part of the Lake Street Elevated Railway" image="/loc/chicago/ashland/lake.jpg" linkOut="https://www.loc.gov/resource/hhh.il0376.photos/?sp=1&st=image"/>
+<LOCItem type="pnp" caption="View of abandoned Pulsaki Tower, part of the Lake Street Elevated Railway" image="/loc/chicago/ashland/lake.jpg" linkOut="https://www.loc.gov/resource/hhh.il0376.photos/?sp=1&st=image" alt="A black and white photograph showing an abandoned tower structure next to an elevated railway."/>
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {src:"Charles Yerkes was the man behind *most* of Chicago’s rapid transit development.", type:"text", position:{col:1, row:1}, size:{width:9, height:2}, style:{outline:"box",fontSize:"1rem", backgroundColor: "white"}},
-    {src:"/loc/chicago/ashland/y1.png", type:"image", position:{col:1, row:2}, size:{width:9, height:13},},
+    {src:"/loc/chicago/ashland/y1.png", type:"image", alt:"Comic illustration of Charles Yerkes' portratit, set against a landscape with a railway car.", position:{col:1, row:2}, size:{width:9, height:13},},
     {src:"This guy was a schemer!", type:"text", position:{col:5, row:10}, size:{width:4, height:2}, style:{outline:"none", fontSize:"1rem", backgroundColor:"#fcff47"}},
     {src:"He started off in Philidelphia, where he managed the city’s money as its treasurer.", type:"text", position:{col:1, row:15}, size:{width:4, height:2}, style:{outline:"box",  backgroundColor:"white",fontSize:"1rem"}},
-    {src:"/loc/chicago/ashland/y2.png", type:"image", position:{col:1, row:16}, size:{width:9, height:10}},
+    {src:"/loc/chicago/ashland/y2.png", type:"image", alt:"A color comic of Charles Yerkes sitting at a table with a large pile of money. He is leaning across the table tryingt to grab the money.", position:{col:1, row:16}, size:{width:9, height:10}},
     {src:"this is so much money...", type:"text", position:{col:5, row:19}, size:{width:3, height:2}, style:{outline:"bubble", fontSize:".9rem"}},
     {src:"I feel like I should do something with it...", type:"text", position:{col:6, row:22}, size:{width:3, height:3}, style:{outline:"bubble", fontSize:".9rem"}},
     {src:"He lost all the city's money after making a risky investment in the stock market, which promptly crashed after the Great Chicago Fire.", type:"text", position:{col:2, row:27}, size:{width:8, height:2}, style:{outline:"box",  backgroundColor:"white",fontSize:"1rem"}},
-    {src:"/loc/chicago/ashland/y3.png", type:"image", position:{col:1, row:30}, size:{width:9, height:10}},
+    {src:"/loc/chicago/ashland/y3.png", type:"image", alt:"A color comic of Charles Yerkes watching a pile of money go up in flames.", position:{col:1, row:30}, size:{width:9, height:10}},
     {src:"Through blackmail and bribes, Yerkes avoided most of his prison sentence and found himself in Chicago, gaining power as a streetcar mogul by buying most of the city's street railway systems.", type:"text", position:{col:1, row:38}, size:{width:9, height:2}, style:{outline:"box",  backgroundColor:"white",fontSize:"1rem"}},
-    {src:"/loc/chicago/ashland/y4.png", type:"image", position:{col:1, row:42}, size:{width:9, height:10}},
+    {src:"/loc/chicago/ashland/y4.png", type:"image", alt:"A comic ilustration showing Charles Yerkes running towards figures in top hats with a stack of dollar bills in his hand.", position:{col:1, row:42}, size:{width:9, height:10}},
     {src:"I feel like it's difficult to build all this infrastructure. Did you do crimes to get it done?", type:"text", position:{col:1, row:41}, size:{width:5, height:3}, style:{outline:"bubble", fontSize:".9rem"} },
     {src:"I wouldn’t say crimes… more like fancy math.", type:"text", position:{col:5, row:48}, size:{width:4, height:3}, style:{outline:"bubble", fontSize:".9rem"}, bubbleStyle: {tailDegree: 220} },
-    {src:"/loc/chicago/ashland/y5.png", type:"image", position:{col:1, row:51}, size:{width:9, height:10}},
+    {src:"/loc/chicago/ashland/y5.png", type:"image", alt:"A comic illustration of the Lake Street L railway going over the river.", position:{col:1, row:51}, size:{width:9, height:10}},
     {src:"After the Lake Street 'L', the next line to open up was the Metropolitan West Side Elevated Railroad, a noteworthy achivement because it was **not** owned by Yerkes. Parts of that line are used as the Blue and Pink Lines today.", type:"text", position:{col:1, row:60}, size:{width:9, height:3}, style:{outline:"box",  backgroundColor:"white",fontSize:"1rem"}},
 ]}/>
 
-Northwestern Elevated Railroad Company was also built under Yerkes, and the Union Loop, which finally connected the lines into the heart of the city, was Yerkes’ as well.
+The Northwestern Elevated Railroad Company was also built under Yerkes, and the Union Loop, which finally connected the lines into the heart of the city, was Yerkes’ as well.
 
-<LOCItem type="pnp" caption="Partial plan of the Randolph-Wells Street Station" image="/loc/chicago/ashland/cs.jpg" linkOut="https://www.loc.gov/resource/hhh.il0387.sheet/?sp=3&st=image"/>
-<LOCItem type="pnp" caption="Randolph Street Station Lake Street-Fifth Avenue Station" image="/loc/chicago/ashland/tracks.jpg" linkOut="https://www.loc.gov/resource/hhh.il0387.photos/?sp=2"/>
+<LOCItem type="pnp" caption="Partial plan of the Randolph-Wells Street Station" image="/loc/chicago/ashland/cs.jpg" linkOut="https://www.loc.gov/resource/hhh.il0387.sheet/?sp=3&st=image" alt="Partial floor plan of the Randolph-Wells Street Station."/>
+<LOCItem type="pnp" caption="Randolph Street Station Lake Street-Fifth Avenue Station" image="/loc/chicago/ashland/tracks.jpg" linkOut="https://www.loc.gov/resource/hhh.il0387.photos/?sp=2"alt="Black and white photograph of the railway of the Union Elevated Railroad with high-rise building in the background."/>
 
-Having so many individual companies was not sustainable, so in 1924, they were all consolidated into the Chicago Rapid Transit Company (another private company). It wasn’t until the 1940s that the CTA took over all the lines to become municipally owned.
+Having so many individual companies was not sustainable, so in 1924, they were all consolidated into the Chicago Rapid Transit Company (another private company). It wasn’t until the 1940s that the municipally-owned Chicago Transit Authority took over all the lines.
 
-Ashland Station is one of the oldest still in use stations today. It was built in 1893 as part of the Lake Street Elevated Railroad. Its exterior, restored to a bright green, pink, and cream, is painted in the painted lady style to highlight its Victorian finishes, and, happily, also match the color lines it serves.
+Today, Ashland Station is one of the oldest stations still in use. It was built in 1893 as part of the Lake Street Elevated Railroad. Its exterior, restored to a bright green, pink, and cream, highlights its Victorian finishes, and, happily, also matches the color lines it serves.
 
 {/* 
 Sticker template: 
