--- a/src/app/content/chicago/canal.mdx
+++ b/src/app/content/chicago/canal.mdx
@@ -18,44 +18,44 @@ stickers: [{image: "/loc/chicago/canal/engineerLogo.png", linkOut: "https://www.
 Water can make or break a city -- not only is it necessary to find a clean source to drink, but being near water can often accelerate a city’s growth as a center of commerce and transportation.
 
 
-Chicago is no different - in the 1830s, a huge project began to build the Illinois & Michigan Canal. This canal would be the first to connect Lake Michigan (and consequentially, all the Great Lakes) to the Gulf of Mexico via the Illinois River and then Mississippi.
+Chicago is no different - in the 1830s, a huge project began to build the Illinois & Michigan Canal. This canal would be the first to connect Lake Michigan (and consequentially, all the Great Lakes) to the Gulf of Mexico via the Illinois River and then the Mississippi.
 
 <ComicSection cols={5} rowHeight="3rem" elements={[
-    {type:"text", src:"This spurred massive growth for the city: Before the canal was built, Chicago was just a small town of 4,000. And by the time the canal was opened in 1848, its population had increased by over 500%.", position:{col:1, row:1}, size:{width:5, height:2}, style:{outline:"box", backgroundColor: "white"}},
+    {type:"text", src:"This spurred massive growth for the city; before the canal was built, Chicago was just a small town of 4,000. And by the time the canal was opened in 1848, its population had increased by over 500%.", position:{col:1, row:1}, size:{width:5, height:2}, style:{outline:"box", backgroundColor: "white"}},
     {text:"text", src:"Would it be the worst if we stayed here?", position:{col:1, row:2}, size:{width:3, height:2}, style:{outline:"bubble",}},
-    {type:"image", src:"/loc/chicago/canal/digging.png", position:{col:1, row:2}, size:{width:9, height:6}},
+    {type:"image", src:"/loc/chicago/canal/digging.png", alt:"A colorful comic illustration of two men working alongside the shore. They're mid-conversation.", position:{col:1, row:2}, size:{width:9, height:6}},
     {type:"text", src:"Growing along the canal was Chicago’s first neighborhood: Bridgeport!", position:{col:3, row:8}, size:{width:3, height:2}, style:{outline:"box", backgroundColor: "white"}},
 ]}/>
 
 
-<LOCItem type="manuscript" caption="Resolution recommending enlargement of Illinois and Michigan Canal from the Abraham Lincoln papers" image="/loc/chicago/canal/lincoln.jpg" linkOut="https://www.loc.gov/resource/mal.1512100/?sp=1&q=illinois+and+michigan+canal&st=text&r=-0.345,-0.398,1.691,2.318,0"/>
+<LOCItem type="manuscript" caption="Resolution recommending enlargement of Illinois and Michigan Canal from the Abraham Lincoln papers" image="/loc/chicago/canal/lincoln.jpg" linkOut="https://www.loc.gov/resource/mal.1512100/?sp=1&q=illinois+and+michigan+canal&st=text&r=-0.345,-0.398,1.691,2.318,0" alt="A scan of a handwritten resolution for englarging the Michigan and Illinois canals."/>
 
-However, the water that you see here today isn’t the I&M Canal. In the late 1800s, Chicago was facing a crisis - its water supply was unreliable. With both sewage and pollution from rebuilding the city after the Great Fire all finding its way into the Chicago River which fed into Lake Michigan, the city was concerned that the water was unusable for drinking.
+However, the water that you see here today isn’t the I&M Canal. In the late 1800s, Chicago was facing a crisis - its water supply was unreliable. Sewage and pollution from rebuilding the city after the Great Fire were finding their way into the Chicago River which fed into Lake Michigan, causing concern that the water was no longer suitable for drinking.
 
 Thus began one of the wildest engineering projects in the history of the country. The state of Illinois decided to construct the Chicago Sanitary and Ship Canal to replace parts of the I&M, which, in addition to widening and deepening the previous canal, reversed the flow of the Chicago River.
 
-<LOCItem type="pnp" caption="Diagram showing how the canal's creation reversed the direction of the flow of water of the Chicago River out of Lake Michigan." image="/loc/chicago/canal/cssc.jpg" linkOut="https://www.loc.gov/resource/hhh.il0976.sheet/?sp=1&st=image"/>
+<LOCItem type="pnp" caption="Diagram showing how the canal's creation reversed the direction of the flow of water of the Chicago River out of Lake Michigan." image="/loc/chicago/canal/cssc.jpg" linkOut="https://www.loc.gov/resource/hhh.il0976.sheet/?sp=1&st=image" alt="Black and white survey drawing featuring a diagram and bird's eye view of the Chicago Sanitary and Ship Canal."/>
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"To create the space for the canal, forty-million cubic yards of dirt were excavated.", position:{col:1, row:1}, size:{width:8, height:2}, style:{outline:"box",backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/canal/esb.png", position:{col:1, row:1}, size:{width:9, height:9}},
+    {type:"image", src:"/loc/chicago/canal/esb.png", alt:"A comic illustration of the Emprire State Building and a cross section of a canal.", position:{col:1, row:1}, size:{width:9, height:9}},
     {type:"text", src:"For context, the Empire State Building has a volume of 37-million cubic **feet**. That means the dirt would fill up over 29 Empire State Buildings.", position:{col:4, row:3}, size:{width:5, height:2}, style:{outline:"none"}},
     {type:"text", src:"To move this enormous amount of dirt, between 5,000 and 8,000 laborers were employed, which was more than any other project in the United States at the time. Since so many of them had to travel in for the job, one challenge was to figure out how to house and feed them.", position:{col:1, row:11}, size:{width:9, height:2}, style:{outline:"box", backgroundColor: "white"}},
     {type:"text", src:"The onsite bakery reportedly produced 400 to 500 loaves of bread every day.", position:{col:1, row:14}, size:{width:4, height:2}, style:{paddingLeft:"4px",outline:"none"}},
-    {type:"image", src:"/loc/chicago/canal/bread1.png", position:{col:1, row:15}, size:{width:5, height:6}},
-    {type:"image", src:"/loc/chicago/canal/bread2.png", position:{col:6, row:15}, size:{width:4, height:6}},
+    {type:"image", src:"/loc/chicago/canal/bread1.png", alt:"A colorful comic panel of a canal worker eating a loaf of bread.", position:{col:1, row:15}, size:{width:5, height:6}},
+    {type:"image", src:"/loc/chicago/canal/bread2.png", alt:"A colorful comic panel of the same worker chewing a large mouthful of bread.", position:{col:6, row:15}, size:{width:4, height:6}},
     {type:"text", src:"I'm still hungry", position:{col:6, row:22}, size:{width:2, height:2}, style:{rotate:"-5deg",outline:"none"}},
-    {type:"image", src:"/loc/chicago/canal/bread3.png", position:{col:5, row:21}, size:{width:5, height:6}},
+    {type:"image", src:"/loc/chicago/canal/bread3.png", alt:"A colorful comic panel showing the same worker, now without bread, sighing in hunger.", position:{col:5, row:21}, size:{width:5, height:6}},
     {type:"text", src:"Creating Chicago's drainage canal served as training for the engineers who would later construct the Panama Canal.", position:{col:1, row:26}, size:{width:9, height:2}, style:{outline:"box"}},
 ]}/>
 
 The decision to reverse the river was controversial, even back then. Because the main point was to dilute the sewage by having it flow through a larger volume of water, people downstream suffered the consequences, including the city of St. Louis, who sued Chicago to reverse the flow.
 
-<LOCItem type="newspaper" caption="Clip from newspaper showing the path of the Great Drainage Canal" image="/loc/chicago/canal/newspaper.jpg" linkOut="https://www.loc.gov/resource/sn92067031/1895-03-21/ed-1/?sp=8&q=chicago+drainage+canal&r=0.193,0.49,0.598,0.41,0"/>
+<LOCItem type="newspaper" caption="Clip from newspaper showing the path of the Great Drainage Canal" image="/loc/chicago/canal/newspaper.jpg" linkOut="https://www.loc.gov/resource/sn92067031/1895-03-21/ed-1/?sp=8&q=chicago+drainage+canal&r=0.193,0.49,0.598,0.41,0" alt="Black and white illustration showing the flow of the Great Drainage Canel. The illustration is made up of smaller drawings showing machinery used to create the canal."/>
 
-The canal is still used for barge traffic. You can see to the north the wide turning basin where ships used to rotate themselves, and just above that is where the Chicago River meets the mouth of the canal.
+The canal is still used for barge traffic. To the north, you can see the wide turning basin where ships used to turn around, and just above that, is where the Chicago River meets the mouth of the canal.
 
-And the plan for clean water worked -- now, the city boasts that the fish habitat here is one of the best in the city.
+And the plan for clean water worked -- now, the city boasts that the fish habitat here is one of the best in Chicago.
 
 {/* 
 Sticker template: 
