chicago public library

--- a/src/app/content/chicago/cpl.mdx
+++ b/src/app/content/chicago/cpl.mdx
@@ -15,65 +15,64 @@ blurb: ""
 stickers: [{image: "/loc/chicago/cpl/s.png", linkOut: "https://www.loc.gov/resource/g4104cm.g01790190601S/?sp=31&st=image&r=0.796,0.179,0.203,0.139,0"},{image: "/loc/chicago/cpl/postcard.png", linkOut: "https://www.loc.gov/resource/pcrd.1a03874/"}, {image: "/loc/chicago/cpl/poster.png", title: "Hull-House community workshop", linkOut: "https://www.loc.gov/item/98513471/"}, {image: "/loc/chicago/cpl/staircase.jpg", linkOut: "https://www.loc.gov/resource/stereo.1s12353/"}, {image: "/loc/chicago/cpl/cplSticker.png", linkOut: "https://www.loc.gov/resource/pcrd.1a03991/"}]
 ---
 
-<LOCItem caption="Stereograph of the Chicago fire ruins." type="pnp" image="/loc/chicago/cpl/stereograph.jpg" linkOut="https://www.loc.gov/resource/stereo.1s41365/"/>
+<LOCItem caption="Stereograph of the Chicago fire ruins." type="pnp" image="/loc/chicago/cpl/stereograph.jpg" linkOut="https://www.loc.gov/resource/stereo.1s41365/" alt="Sepia stereogrpah of the ruins of the Chicago fire."/>
 
-The Chicago Public Library was born out of the ruins of the Great Fire. Before the fire, there had only been private libraries, and it was through the inspiration of two Englishmen who had the idea and drive to collect over 8,000 books to send to the city as an act of “brotherly kindness”.
+The Chicago Public Library was born out of the ruins of the Great Fire. In the fire’s aftermath, two Englishmen collected and gifted 8,000 books to the city as an act of “brotherly kindness.”
 
-Having received such a large donation, the next task was to find a physical location for the library. Over the next two decades, the library roamed across temporary locations, including a water tank and the fourth floor of city hall. 
+Prior to the fire, there were no public libraries, so the next task was to find a physical location for  such a large donation. Over the next two decades, the library moved from one temporary location to the next, including a water tank and the fourth floor of City Hall.
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"William Frederick Poole was the first Librarian of the Chicago Public Library, and his goal was to grow the new organization's collections. He used his connections across the United States to persuade people to donate books, and implied that the fire had burned them all (even though it had happened two years before a library ever existed).", position:{col:1, row:1}, size:{width:9, height:1}, style:{outline:"box", backgroundColor: "white"}},
     {type:"image", src:"/loc/chicago/cpl/librarians1.png", position:{col:1, row:5}, size:{width:9, height:12}},
-    {type:"text", src:"Hey, dude. Congrats on the new gig!", position:{col:2, row:4}, size:{width:4, height:2}, style:{outline:"bubble"} },
+    {type:"text", src:"Hey, dude. Congrats on the new gig!", alt:"A comic illustration of William Fredrick Poole, the first librarian of the Chicago Public Library, in mid-conversatin with Frederick H. Hild, the second librarian.", position:{col:2, row:4}, size:{width:4, height:2}, style:{outline:"bubble"} },
     {type:"text", src:"I think I'm leaving you in a good place to take over.", position:{col:6, row:4}, size:{width:4, height:2}, style:{outline:"bubble"} },
     {type:"text", src:"William Frederick Poole", position:{col:1, row:17}, size:{width:9, height:1}, style:{outline:"none",}},
     {type:"text", src:"This is the most books we've ever had!", position:{col:5, row:17}, size:{width:4, height:2}, style:{outline:"bubble"} },
-    {type:"image", src:"/loc/chicago/cpl/librarians2.png", position:{col:1, row:17}, size:{width:9, height:8}},
+    {type:"image", src:"/loc/chicago/cpl/librarians2.png", alt:"A comic panel of a mountain of books, and William and Frederick staring up at it.", position:{col:1, row:17}, size:{width:9, height:8}},
     {type:"text", src:"I think we need... a place to put all these", position:{col:2, row:25}, size:{width:3, height:2}, style:{outline:"none"} },
-    {type:"image", src:"/loc/chicago/cpl/librarians3.png", position:{col:1, row:24}, size:{width:9, height:6}},
+    {type:"image", src:"/loc/chicago/cpl/librarians3.png", alt:"A comic panel of Frederick staring nervously upward, presumably at the pile of books." position:{col:1, row:24}, size:{width:9, height:6}},
     {type:"text", src:"The second Librarian of the Chicago Public Library was Frederick H. Hild, whose goal was to find a permanent home for the library.", position:{col:1, row:29}, size:{width:9, height:2}, style:{outline:"box", backgroundColor:"white",}},
 ]}/>
 
-The call for building proposals came out with very specific requirements. It was planned to be built on the site of Dearborn Park, outlined by Michigan Ave, Randolph St, Washington St, and North Garland Court.
+The plan was for the library to be built on the site of Dearborn Park, outlined by Michigan Ave, Randolph St, Washington St, and North Garland Court.
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
-    {type:"text", src:"When putting out the call for proposals for the new library building design, there were some very specific requirements for eligible proposals to fulfill.", position:{col:1, row:1}, size:{width:5, height:2}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/cpl/window1.png", position:{col:1, row:2}, size:{width:9, height:8}},
-    {type:"text", src:"One focus was maximizing the amount of natural light that would come into the building.", position:{col:5, row:9}, size:{width:5, height:2}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/cpl/window2.png", position:{col:1, row:10}, size:{width:9, height:8}},
-    {type:"text", src:"For example, they required that there should be book stacks on the Michigan Avenue side of the building to take advantage of its eastern face for sun to come in.", position:{col:5, row:17}, size:{width:5, height:2}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/cpl/window3.png", position:{col:1, row:18}, size:{width:9, height:8}},
-    {type:"image", src:"/loc/chicago/cpl/window4.png", position:{col:1, row:26}, size:{width:9, height:8}},
+    {type:"text", src:"The call for building proposals for the new library was filled with very specific requirements.", position:{col:1, row:1}, size:{width:5, height:2}, style:{outline:"box", backgroundColor: "white"}},
+    {type:"image", src:"/loc/chicago/cpl/window1.png", alt:"A comic illustration showing a woman at a library table reading, with a ray of light coming from a window.", position:{col:1, row:2}, size:{width:9, height:8}},
+    {type:"text", src:"One requirement was maximizing the amount of natural light that would come into the building.", position:{col:5, row:9}, size:{width:5, height:2}, style:{outline:"box", backgroundColor: "white"}},
+    {type:"image", src:"/loc/chicago/cpl/window2.png", alt:"A comic panel of the interior of the libray with large windows that allow for plenty of natural light.", position:{col:1, row:10}, size:{width:9, height:8}},
+    {type:"text", src:"Another specification was that there should be book stacks on the Michigan Avenue side of the building to take advantage of its eastern face and the incoming sunlight.", position:{col:5, row:17}, size:{width:5, height:2}, style:{outline:"box", backgroundColor: "white"}},
+    {type:"image", src:"/loc/chicago/cpl/window3.png", alt:"A comic of the same woman reading at a table in the library. The ray of light is now very strong and she is surprised by it's intensity.", position:{col:1, row:18}, size:{width:9, height:8}},
+    {type:"image", src:"/loc/chicago/cpl/window4.png", alt:"A comic of the woman at the table now looking up at the strong beam of light confused.", position:{col:1, row:26}, size:{width:9, height:8}},
 ]}/>
 <ComicSection cols={9} rowHeight="2rem" elements={[
-    {type:"text", src:"And to make sure that these windows were as effective as possible, the exterior ledges should be wide enough that a window cleaner can perch on it to clean the windows.", position:{col:1, row:1}, size:{width:9, height:2}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/cpl/windowWasher.png", position:{col:1, row:1}, size:{width:9, height:11}},
+    {type:"text", src:"To ensure that the windows were as effective as possible, the exterior window ledges had to be wide enough that a window cleaner could perch on them to clean the windows.", position:{col:1, row:1}, size:{width:9, height:2}, style:{outline:"box", backgroundColor: "white"}},
+    {type:"image", src:"/loc/chicago/cpl/windowWasher.png", alt:"A comic illustration of a window washer kneeling on a window ledge and washing a window.",  position:{col:1, row:1}, size:{width:9, height:11}},
     {type:"text", src:"Every detail was considered when designing this building", position:{col:1, row:13}, size:{width:9, height:2}, style:{outline:"box", backgroundColor: "white"}},
 ]}/>
 
 Some of the other building requirements included:
-- It should be built of stone -- either granite or Bedford bluestone -- and not of steel and brick
-- The exterior should make it clear that it is a library
+- It should be built of stone -- either granite or Bedford bluestone -- and not of steel and brick.
+- The exterior should make it clear that the building is a library.
 - The rooms should be built with independent fireproof sections.
-<LOCItem type="pnp" image="/loc/chicago/cpl/sanborn.jpg" caption="Insurance map showing the fireproof library." linkOut="https://www.loc.gov/resource/g4104cm.g01790190601S/?sp=31&st=image&r=0.423,0.192,0.594,0.416,0"/>
+<LOCItem type="pnp" image="/loc/chicago/cpl/sanborn.jpg" caption="Insurance map showing the fireproof library." linkOut="https://www.loc.gov/resource/g4104cm.g01790190601S/?sp=31&st=image&r=0.423,0.192,0.594,0.416,0" alt="Insurance map showing the various sections of the library, and the firewalls."/>
 - And all of this should cost no more than $1,200,000
 
 The contract was awarded to the Shepley, Rutan and Coolidge firm, who also designed the nearby Art Institute.
 
 
-Every detail that could be thought out was -- including the mural that appears above the southern stairs. This mural is a mosaic made of pieces of glass, mother of pearl and shells, and stones are laid into marble. The choice of mosaic over a painted mural was because of the nearby railyards, whose smoke would have damaged paint.
+Every detail was perfectly planned -- including the mural that appears above the southern stairs. The mural is a mosaic made of pieces of glass, mother of pearl, shells, and stones  laid into marble. A mosaic mural was chosen over a painted mural because of the library’s proximity to nearby rail yards, whose smoke would have damaged the paint.
 
-<LOCItem type="pnp" caption="Photograph showing the mosaics above the south staircase in the previous Chicago main library" image="/loc/chicago/cpl/mural.jpg" linkOut="https://www.loc.gov/resource/hhh.il0100.photos/?sp=3"/>
-<LOCItem type="map" image="/loc/chicago/cpl/pano.jpg" caption="Birds-eye view of Chicago showing the nearby railyards" linkOut="https://www.loc.gov/resource/g4104c.pm001550/?r=0.532,0.282,0.407,0.285,0"/>
+<LOCItem type="pnp" caption="Photograph showing the mosaics above the south staircase in the previous main library branch" image="/loc/chicago/cpl/mural.jpg" linkOut="https://www.loc.gov/resource/hhh.il0100.photos/?sp=3" alt="A black and white photograph of a large mosaic mural over an ornate staircase."/>
+<LOCItem type="map" image="/loc/chicago/cpl/pano.jpg" caption="Birds-eye view of Chicago showing the nearby rail yards" linkOut="https://www.loc.gov/resource/g4104c.pm001550/?r=0.532,0.282,0.407,0.285,0" alt="A bird's eye color drawing of Chicago's central business section."/>
 
-However, this building is no longer the home to the Chicago Public Library -- in the 60s, library technologies had evolved librarians found that the building wasn't convinient anymore. It was clear that a new building was needed. In 1981, Mayor Harold Washington approved the budget to build the new central library on a one-and-a-half block lot. 
+However, this building is no longer the home to the Chicago Public Library -- in the 1960s, library technologies had evolved and librarians found that the building was ill-suited for the library’s growing needs. It was clear that a new building was needed and in 1981, Mayor Harold Washington approved a budget to build the new central library on a one-and-a-half block lot.
 
-<LOCItem type="pnp" image="/loc/chicago/cpl/carol.jpg" caption="Photographs in the Carol M. Highsmith Archive, Library of Congress, Prints and Photographs Division.
-" linkOut="https://www.loc.gov/resource/highsm.16300/?r=-0.107,-0.031,1.215,0.836,0"/>
+<LOCItem type="pnp" image="/loc/chicago/cpl/carol.jpg" caption="Photo of the Harold Washington Library Center, the central branch of the Chicago Public Library" linkOut="https://www.loc.gov/resource/highsm.16300/?r=-0.107,-0.031,1.215,0.836,0" alt="Color photograph of a large multi-storied building with numerous windows."/>
 
-Today, the Chicago Public Library has over 5 million books, 81 locations, and in the last year issued over 160,000 new library cards. Its seal incorporates the city of Chicago “municipal device” which represents the north, south, and main branch of the Chicago River.
+Today, the Chicago Public Library has over 5 million books, 81 locations, and in the last year issued over 160,000 new library cards. Its seal incorporates the city of Chicago's “municipal device” which represents the north, south, and main branch of the Chicago River.
 <ComicSection cols={9} rowHeight="2rem" elements={[
-    {type:"image", src:"/loc/chicago/cpl/seal.png", position:{col:1, row:1}, size:{width:9, height:9}},
+    {type:"image", src:"/loc/chicago/cpl/seal.png", alt:"A drawing of Chicago's seal superimposed over a grid drawing of the city.", position:{col:1, row:1}, size:{width:9, height:9}},
 ]}/>
 
 {/* 
