cpl-comma-added

--- a/src/app/content/chicago/cpl.mdx
+++ b/src/app/content/chicago/cpl.mdx
@@ -30,7 +30,7 @@ Prior to the fire, there were no public libraries, so the next task was to find 
     {type:"text", src:"This is the most books we've ever had!", position:{col:5, row:17}, size:{width:4, height:2}, style:{outline:"bubble"} },
     {type:"image", src:"/loc/chicago/cpl/librarians2.png", alt:"A comic panel of a mountain of books, and William and Frederick staring up at it.", position:{col:1, row:17}, size:{width:9, height:8}},
     {type:"text", src:"I think we need... a place to put all these", position:{col:2, row:25}, size:{width:3, height:2}, style:{outline:"none"} },
-    {type:"image", src:"/loc/chicago/cpl/librarians3.png", alt:"A comic panel of Frederick staring nervously upward, presumably at the pile of books." position:{col:1, row:24}, size:{width:9, height:6}},
+    {type:"image", src:"/loc/chicago/cpl/librarians3.png", alt:"A comic panel of Frederick staring nervously upward, presumably at the pile of books.", position:{col:1, row:24}, size:{width:9, height:6}},
     {type:"text", src:"The second Librarian of the Chicago Public Library was Frederick H. Hild, whose goal was to find a permanent home for the library.", position:{col:1, row:29}, size:{width:9, height:2}, style:{outline:"box", backgroundColor:"white",}},
 ]}/>
 
