--- a/src/app/content/chicago/cpl.mdx
+++ b/src/app/content/chicago/cpl.mdx
@@ -24,7 +24,7 @@ Prior to the fire, there were no public libraries, so the next task was to find 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"William Frederick Poole was the first Librarian of the Chicago Public Library, and his goal was to grow the new organization's collections. He used his connections across the United States to persuade people to donate books, and implied that the fire had burned them all (even though it had happened two years before a library ever existed).", position:{col:1, row:1}, size:{width:9, height:1}, style:{outline:"box", backgroundColor: "white"}},
     {type:"image", src:"/loc/chicago/cpl/librarians1.png", position:{col:1, row:5}, size:{width:9, height:12}},
-    {type:"text", src:"Hey, dude. Congrats on the new gig!", alt:"A comic illustration of William Fredrick Poole, the first librarian of the Chicago Public Library, in mid-conversatin with Frederick H. Hild, the second librarian.", position:{col:2, row:4}, size:{width:4, height:2}, style:{outline:"bubble"} },
+    {type:"text", src:"Hey, dude. Congrats on the new gig!", alt:"A comic illustration of William Fredrick Poole, the first librarian of the Chicago Public Library, in mid-conversation with Frederick H. Hild, the second librarian.", position:{col:2, row:4}, size:{width:4, height:2}, style:{outline:"bubble"} },
     {type:"text", src:"I think I'm leaving you in a good place to take over.", position:{col:6, row:4}, size:{width:4, height:2}, style:{outline:"bubble"} },
     {type:"text", src:"William Frederick Poole", position:{col:1, row:17}, size:{width:9, height:1}, style:{outline:"none",}},
     {type:"text", src:"This is the most books we've ever had!", position:{col:5, row:17}, size:{width:4, height:2}, style:{outline:"bubble"} },
