--- a/src/app/content/chicago/ashland.mdx
+++ b/src/app/content/chicago/ashland.mdx
@@ -32,7 +32,7 @@ The following year, the Lake Street “L”, which ran from 52nd Avenue to Marke
     {src:"/loc/chicago/ashland/y1.png", type:"image", alt:"Comic illustration of Charles Yerkes' portratit, set against a landscape with a railway car.", position:{col:1, row:2}, size:{width:9, height:13},},
     {src:"This guy was a schemer!", type:"text", position:{col:5, row:10}, size:{width:4, height:2}, style:{outline:"none", fontSize:"1rem", backgroundColor:"#fcff47"}},
     {src:"He started off in Philidelphia, where he managed the city’s money as its treasurer.", type:"text", position:{col:1, row:15}, size:{width:4, height:2}, style:{outline:"box",  backgroundColor:"white",fontSize:"1rem"}},
-    {src:"/loc/chicago/ashland/y2.png", type:"image", alt:"A color comic of Charles Yerkes sitting at a table with a large pile of money. He is leaning across the table tryingt to grab the money.", position:{col:1, row:16}, size:{width:9, height:10}},
+    {src:"/loc/chicago/ashland/y2.png", type:"image", alt:"A color comic of Charles Yerkes sitting at a table with a large pile of money. He is leaning across the table trying to grab the money.", position:{col:1, row:16}, size:{width:9, height:10}},
     {src:"this is so much money...", type:"text", position:{col:5, row:19}, size:{width:3, height:2}, style:{outline:"bubble", fontSize:".9rem"}},
     {src:"I feel like I should do something with it...", type:"text", position:{col:6, row:22}, size:{width:3, height:3}, style:{outline:"bubble", fontSize:".9rem"}},
     {src:"He lost all the city's money after making a risky investment in the stock market, which promptly crashed after the Great Chicago Fire.", type:"text", position:{col:2, row:27}, size:{width:8, height:2}, style:{outline:"box",  backgroundColor:"white",fontSize:"1rem"}},
