--- a/src/app/content/chicago/cpl.mdx
+++ b/src/app/content/chicago/cpl.mdx
@@ -15,7 +15,7 @@ blurb: ""
 stickers: [{image: "/loc/chicago/cpl/s.png", linkOut: "https://www.loc.gov/resource/g4104cm.g01790190601S/?sp=31&st=image&r=0.796,0.179,0.203,0.139,0"},{image: "/loc/chicago/cpl/postcard.png", linkOut: "https://www.loc.gov/resource/pcrd.1a03874/"}, {image: "/loc/chicago/cpl/poster.png", title: "Hull-House community workshop", linkOut: "https://www.loc.gov/item/98513471/"}, {image: "/loc/chicago/cpl/staircase.jpg", linkOut: "https://www.loc.gov/resource/stereo.1s12353/"}, {image: "/loc/chicago/cpl/cplSticker.png", linkOut: "https://www.loc.gov/resource/pcrd.1a03991/"}]
 ---
 
-<LOCItem caption="Stereograph of the Chicago fire ruins." type="pnp" image="/loc/chicago/cpl/stereograph.jpg" linkOut="https://www.loc.gov/resource/stereo.1s41365/" alt="Sepia stereogrpah of the ruins of the Chicago fire."/>
+<LOCItem caption="Stereograph of the Chicago fire ruins." type="pnp" image="/loc/chicago/cpl/stereograph.jpg" linkOut="https://www.loc.gov/resource/stereo.1s41365/" alt="Sepia stereograph of the ruins of the Chicago fire."/>
 
 The Chicago Public Library was born out of the ruins of the Great Fire. In the fire’s aftermath, two Englishmen collected and gifted 8,000 books to the city as an act of “brotherly kindness.”
 
