--- a/src/app/content/seattle/built/montlakeBridge.mdx
+++ b/src/app/content/seattle/built/montlakeBridge.mdx
@@ -15,7 +15,7 @@ blurb: Seattle is a city of hills, valleys, and waterways, with bridges connecti
 stickers: [{image: "/loc/seattle/montlakeBridge/tower.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=3", title: "Diagram of Montlake Bridge control tower"},{image: "/loc/seattle/montlakeBridge/seattleMap.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1", title: "Map of Montlake Bridge location"},{image: "/loc/seattle/montlakeBridge/montlakeBridge.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1", title: "Title of engineering report"},{image: "/loc/seattle/montlakeBridge/bridgeDiagram.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1", title: "Diagram of bridge from HAER report"}, {image: "/loc/seattle/montlakeBridge/protestors.png"}]
 ---
 
-The Lake Washington Ship Canal was built to create a navigable waterway from the Puget Sound to Lake Washington. 
+The Lake Washington Ship Canal was constructed from 1911 to 1934 to create a navigable waterway from the Puget Sound to Lake Washington. 
 
 There were five different paths considered -- 
 
